# htdung-core

./: .gitignore  README.MD  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
auth-service/src/auth/: jwt.rs  password.rs
auth-service/src/db/: user_repo.rs
auth-service/src/grpc/: auth_service.rs
web-client/: Dockerfile  package.json
web-client/proto/: auth.proto
web-client/src/lib/: auth-grpc.types.ts  auth.ts  grpc.ts  types.ts
web-client/src/pages/: dashboard.tsx  login.tsx
web-client/src/pages/api/auth/: login.ts  logout.ts  register.ts  validate.ts
