    [package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

tonic = "0.11"
prost = "0.12"

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1", features = ["v4"] }

argon2 = "0.5"
jsonwebtoken = "9"

serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"    
thiserror = "1"